--- a/app/src/main/res/layout/content_profile_edit_personal.xml
+++ b/app/src/main/res/layout/content_profile_edit_personal.xml
@@ -266,8 +266,9 @@
                         android:layout_width="@dimen/_75sdp"
                         android:layout_height="@dimen/_75sdp"
                         app:civ_border_width="0dp"
-                        app:civ_background_color="@android:color/transparent"
-                        app:civ_border_color="@android:color/transparent"
+                        app:civ_background_color="@android:color/white"
+                        app:civ_border_color="@android:color/white"
+                        app:civ_shadow="false"
                         app:layout_constraintEnd_toStartOf="@+id/imageView10"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView9"
