--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -375,8 +375,9 @@
                             android:contentDescription="@string/app_name"
                             android:background="@drawable/ic_user"
                             app:civ_border_width="0dp"
-                            app:civ_background_color="@android:color/transparent"
-                            app:civ_border_color="@android:color/transparent"
+                            app:civ_background_color="@android:color/white"
+                            app:civ_border_color="@android:color/white"
+                            app:civ_shadow="false"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintRight_toLeftOf="@+id/imageView2"
                             app:layout_constraintStart_toStartOf="parent"
