--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -17,8 +17,9 @@
           android:layout_height="@dimen/_55sdp"
           android:background="@drawable/ic_user"
           app:civ_border_width="0dp"
-          app:civ_background_color="@android:color/transparent"
-          app:civ_border_color="@android:color/transparent"
+          app:civ_background_color="@android:color/white"
+          app:civ_border_color="@android:color/white"
+          app:civ_shadow="false"
           android:contentDescription="@string/app_name"
           android:layout_centerInParent="true"
           android:layout_alignParentStart="true"
