--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -4,66 +4,76 @@
     android:id="@+id/ll_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_bg"
-    android:padding="@dimen/_30sdp">
+    android:background="@android:color/white"
+    android:padding="@dimen/_40sdp">
 
     <ImageView
         android:id="@+id/imageView"
+        android:contentDescription="@string/app_name"
         android:layout_width="@dimen/_75sdp"
         android:layout_height="@dimen/_75sdp"
-        android:layout_marginTop="@dimen/_40sdp"
+        android:layout_marginTop="@dimen/_25sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/lpesa_logo" />
 
+
     <com.app.l_pesa.common.CommonTextRegular
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
+        android:id="@+id/txtHeader"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_40sdp"
-        android:shadowColor="#000000"
-        android:shadowDx="2.7"
-        android:shadowDy="2.7"
         android:fontFamily="@font/montserrat"
-        android:shadowRadius="1"
-        android:text="@string/forgot_password"
-        android:textColor="@color/colorYellow"
+        android:text="@string/thank_you"
+        android:gravity="center"
+        android:textColor="@color/color_deep_gold"
         android:textSize="@dimen/_20sdp"
         android:textStyle="bold"
+        android:padding="@dimen/_2sdp"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintBottom_toTopOf="@+id/ll_flag_section"
+
+        />
+
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/ll_flag_section"
         android:layout_width="0dp"
+        android:background="@drawable/et_bg_white_border_black"
         android:layout_height="@dimen/_35sdp"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:background="@drawable/bg_black_view"
-        android:paddingStart="@dimen/_10sdp"
-        android:paddingEnd="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:paddingStart="@dimen/_1sdp"
+        android:paddingEnd="@dimen/_1sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7">
+        app:layout_constraintTop_toBottomOf="@+id/txtHeader">
+
         <ImageView
             android:id="@+id/img_country"
             android:layout_width="@dimen/_20sdp"
-            android:layout_height="@dimen/_20sdp"
-            app:layout_constraintEnd_toStartOf="@+id/imageView34"
+            android:layout_height="@dimen/_18sdp"
+            android:paddingStart="@dimen/_3sdp"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:paddingEnd="@dimen/_1sdp"
+            android:contentDescription="@string/app_name"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/imageView33"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-             />
+            app:layout_constraintTop_toTopOf="parent" />
+
         <View
+            android:id="@+id/view_1"
             android:layout_width="@dimen/_1sdp"
             android:layout_height="@dimen/_20sdp"
-            android:id="@+id/view14"
             android:layout_marginStart="@dimen/_10sdp"
-            android:background="@color/semi_white"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@color/color_gray_light"
             app:layout_constraintEnd_toStartOf="@+id/etPhone"
-            app:layout_constraintStart_toEndOf="@+id/imageView34"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView33"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.app.l_pesa.common.CommonEditTextRegular
@@ -71,35 +81,39 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:background="@android:color/transparent"
+            android:inputType="numberSigned"
+            android:paddingStart="@dimen/_10sdp"
+            android:paddingEnd="@dimen/_2sdp"
+            android:hint="@string/phone_no"
             android:cursorVisible="true"
             android:focusable="true"
-            android:fontFamily="@font/montserrat"
-            android:hint="@string/phone_no"
-            android:inputType="numberSigned"
             android:maxLines="1"
             android:maxLength="15"
-            app:layout_constraintStart_toEndOf="@id/view14"
-            android:paddingStart="@dimen/_10sdp"
-            android:paddingEnd="@dimen/_10sdp"
-            android:textColor="@color/colorSemiWhite"
-            android:textColorHint="@color/colorSemiWhite"
+            android:textIsSelectable="false"
+            android:longClickable="false"
+            android:fontFamily="@font/montserrat"
+            android:textColor="@color/colorBlack"
+            android:textColorHint="@color/colorTextBlackLight"
             android:textCursorDrawable="@null"
             android:textSize="@dimen/_12sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/view_1"
             app:layout_constraintTop_toTopOf="parent" />
+
         <ImageView
-            android:id="@+id/imageView34"
+            android:id="@+id/imageView33"
             android:contentDescription="@string/app_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_3sdp"
             android:layout_marginStart="@dimen/_5sdp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/view14"
+            app:layout_constraintEnd_toStartOf="@+id/view_1"
+            app:layout_constraintBottom_toBottomOf="@+id/ll_flag_section"
             app:layout_constraintStart_toEndOf="@+id/img_country"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/ll_flag_section"
             app:srcCompat="@drawable/ic_dropdown_icon" />
+
 
     </android.support.constraint.ConstraintLayout>
 
@@ -107,12 +121,12 @@
         android:id="@+id/buttonSubmit"
         android:layout_width="0dp"
         android:layout_height="@dimen/_35sdp"
-        android:layout_marginTop="@dimen/_15sdp"
+        android:layout_marginTop="@dimen/_25sdp"
         android:background="@drawable/yellow_button"
-        android:text="@string/submit"
         android:fontFamily="@font/montserrat"
-        android:textColor="@color/semi_white"
+        android:textColor="@color/colorWhite"
         android:textStyle="bold"
+        android:text="@string/submit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ll_flag_section" />
@@ -125,14 +139,14 @@
         android:layout_height="wrap_content"
         android:drawableStart="@drawable/ic_info_icon"
         android:text="@string/enter_email_or_mobile"
-        android:layout_marginTop="@dimen/_15sdp"
+        android:layout_marginTop="@dimen/_20sdp"
         android:fontFamily="@font/montserrat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="@dimen/_9sdp"
+        android:textSize="@dimen/_10sdp"
         android:drawablePadding="@dimen/_10sdp"
         android:lineSpacingExtra="@dimen/_2sdp"
-        android:textColor="@color/colorSemiWhite"
+        android:textColor="@color/colorTextBlackLight"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonSubmit" />
 
@@ -141,7 +155,7 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="@dimen/_32sdp"
         android:layout_height="@dimen/_32sdp"
-        android:indeterminateTint="@color/colorWhite"
+        android:indeterminateTint="@color/colorRed"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
