--- a/app/src/main/res/layout/activity_change_login_pin.xml
+++ b/app/src/main/res/layout/activity_change_login_pin.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/rootLayout"
-    tools:context=".password.view.ChangeLoginPinActivity">
+    tools:context=".pin.view.ChangeLoginPinActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
