--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -115,7 +115,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_15sdp"
-        android:text="@string/forgot_password"
+        android:text="@string/forgot_pin"
         android:fontFamily="@font/montserrat"
         android:textColor="@color/colorSemiBlack"
         app:layout_constraintBottom_toTopOf="@+id/txtRegister"
