--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,36 +10,32 @@
 
     <ImageView
         android:id="@+id/imageView"
+        android:contentDescription="@string/app_name"
         android:layout_width="@dimen/_75sdp"
         android:layout_height="@dimen/_75sdp"
-        android:layout_marginTop="@dimen/_60sdp"
-        android:contentDescription="@string/app_name"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        android:layout_marginTop="@dimen/_25sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="spread"
         app:srcCompat="@drawable/lpesa_logo" />
 
     <com.app.l_pesa.common.CommonTextRegular
         android:id="@+id/textView4"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/starter_loan"
         android:textColor="@color/colorYellow"
-        android:textSize="@dimen/_22sdp"
+        android:textSize="@dimen/_20sdp"
+        android:gravity="center"
         android:textStyle="bold"
-        android:shadowColor="#000000"
-        android:shadowDx="2.7"
-        android:shadowDy="2.7"
-        android:shadowRadius="1"
+        android:padding="@dimen/_2sdp"
         android:fontFamily="@font/montserrat"
-        android:layout_marginTop="@dimen/_70sdp"
+        android:layout_marginTop="@dimen/_50sdp"
         app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="252dp" />
+         />
 
     <com.app.l_pesa.common.CustomButtonRegular
         android:id="@+id/buttonSignUp"
@@ -51,7 +47,7 @@
         android:textColor="@color/colorSemiWhite"
         app:layout_constraintEnd_toEndOf="parent"
         android:textStyle="bold"
-        android:layout_marginTop="@dimen/_3sdp"
+        android:layout_marginTop="@dimen/_15sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
