--- a/app/src/main/res/layout/activity_forgot_pin.xml
+++ b/app/src/main/res/layout/activity_forgot_pin.xml
@@ -12,22 +12,23 @@
         android:contentDescription="@string/app_name"
         android:layout_width="@dimen/_75sdp"
         android:layout_height="@dimen/_75sdp"
-        android:layout_marginTop="@dimen/_25sdp"
+        android:layout_marginTop="@dimen/_10sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/lpesa_logo" />
+        app:srcCompat="@drawable/ic_app_logo" />
+
 
 
     <com.app.l_pesa.common.CommonTextRegular
         android:id="@+id/txtHeader"
-        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_20sdp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/montserrat"
-        android:text="@string/thank_you"
+        android:text="@string/forgot_pin_title"
         android:gravity="center"
-        android:textColor="@color/color_deep_gold"
+        android:textColor="@color/colorTextBlack"
         android:textSize="@dimen/_20sdp"
         android:textStyle="bold"
         android:padding="@dimen/_2sdp"
@@ -49,19 +50,20 @@
         android:paddingEnd="@dimen/_1sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtHeader">
+        app:layout_constraintTop_toBottomOf="@+id/txtHeader"
+        >
 
         <ImageView
             android:id="@+id/img_country"
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_18sdp"
-            android:paddingStart="@dimen/_3sdp"
             android:layout_marginStart="@dimen/_5sdp"
-            android:paddingEnd="@dimen/_1sdp"
             android:contentDescription="@string/app_name"
+            android:paddingStart="@dimen/_3sdp"
+            android:paddingEnd="@dimen/_1sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/imageView33"
-            app:layout_constraintHorizontal_chainStyle="spread_inside"
+            app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -89,10 +91,10 @@
             android:focusable="true"
             android:maxLines="1"
             android:maxLength="15"
-            android:textIsSelectable="false"
             android:longClickable="false"
+            android:textIsSelectable="false"
             android:fontFamily="@font/montserrat"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/colorTextBlack"
             android:textColorHint="@color/colorTextBlackLight"
             android:textCursorDrawable="@null"
             android:textSize="@dimen/_12sdp"
@@ -120,8 +122,8 @@
     <com.app.l_pesa.common.CustomButtonRegular
         android:id="@+id/buttonSubmit"
         android:layout_width="0dp"
-        android:layout_height="@dimen/_35sdp"
-        android:layout_marginTop="@dimen/_25sdp"
+        android:layout_height="@dimen/_32sdp"
+        android:layout_marginTop="@dimen/_15sdp"
         android:background="@drawable/yellow_button"
         android:fontFamily="@font/montserrat"
         android:textColor="@color/colorWhite"
