--- a/app/src/main/res/layout/activity_registration_step_one.xml
+++ b/app/src/main/res/layout/activity_registration_step_one.xml
@@ -68,7 +68,7 @@
             android:id="@+id/view_1"
             android:layout_width="@dimen/_1sdp"
             android:layout_height="@dimen/_20sdp"
-            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginStart="@dimen/_5sdp"
             android:background="@color/color_gray_light"
             app:layout_constraintEnd_toStartOf="@+id/etPhone"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -137,7 +137,7 @@
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_18sdp"
             android:paddingStart="@dimen/_3sdp"
-            android:layout_marginStart="@dimen/_18sdp"
+            android:layout_marginStart="@dimen/_15sdp"
             android:paddingEnd="@dimen/_1sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/view16"
@@ -173,7 +173,7 @@
             android:paddingStart="@dimen/_10sdp"
             android:paddingEnd="@dimen/_10sdp"
             android:fontFamily="@font/montserrat"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/colorTextBlack"
             android:textColorHint="@color/colorTextBlackLight"
             android:textSize="@dimen/_12sdp"
             android:textCursorDrawable="@null"
