--- a/app/src/main/res/layout/content_registration_step_three.xml
+++ b/app/src/main/res/layout/content_registration_step_three.xml
@@ -12,11 +12,12 @@
     tools:showIn="@layout/activity_registration_step_three">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/txtHeader"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_10sdp"
         android:text="@string/thank_you"
-        android:textColor="@color/color_deep_gold"
+        android:textColor="@color/colorTextBlack"
         android:textSize="@dimen/_20sdp"
         android:textStyle="bold"
         android:fontFamily="@font/montserrat"
@@ -32,7 +33,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/upload_id_picture"
-        android:textSize="@dimen/_11sdp"
+        android:textSize="@dimen/_10sdp"
         android:textColor="@color/colorTextBlackLight"
         android:fontFamily="@font/montserrat"
         android:gravity="center"
@@ -41,15 +42,15 @@
         app:layout_constraintBottom_toTopOf="@+id/etIdType"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/txtHeader" />
 
-    <EditText
+    <com.app.l_pesa.common.CommonEditTextRegular
         android:id="@+id/etIdType"
         android:layout_width="0dp"
         android:layout_height="@dimen/_35sdp"
         android:background="@drawable/et_bg_white_border_black"
         android:hint="@string/choose_type_id"
-        android:textColor="@color/colorBlack"
+        android:textColor="@color/colorTextBlack"
         android:textColorHint="@color/colorTextBlackLight"
         android:layout_marginTop="@dimen/_20sdp"
         android:textSize="@dimen/_12sdp"
@@ -65,11 +66,11 @@
 
         />
 
-    <EditText
+    <com.app.l_pesa.common.CommonEditTextRegular
         android:id="@+id/etNo"
         android:textSize="@dimen/_12sdp"
         android:hint="@string/enter_id_number"
-        android:textColor="@color/colorBlack"
+        android:textColor="@color/colorTextBlack"
         android:textColorHint="@color/colorTextBlackLight"
         android:layout_width="0dp"
         android:maxLines="1"
@@ -77,7 +78,7 @@
         android:inputType="text"
         android:layout_height="@dimen/_35sdp"
         android:background="@drawable/et_bg_white_border_black"
-        android:layout_marginTop="@dimen/_12sdp"
+        android:layout_marginTop="@dimen/_10sdp"
         android:paddingStart="@dimen/_15sdp"
         android:paddingEnd="@dimen/_10sdp"
         app:layout_constraintBottom_toTopOf="@+id/imgPersonalType"
@@ -90,7 +91,8 @@
         android:id="@+id/txt_uploadHeader"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/_10sdp"
+        android:textSize="@dimen/_12sdp"
+        android:padding="@dimen/_2sdp"
         android:text="@string/select"
         android:textColor="@color/colorTextBlack"
         android:fontFamily="@font/montserrat"
@@ -98,7 +100,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etNo"
         app:layout_constraintBottom_toTopOf="@+id/imgPersonalType"
-        android:layout_marginTop="@dimen/_12sdp"
+        android:layout_marginTop="@dimen/_10sdp"
         />
 
     <ImageView
@@ -114,17 +116,16 @@
         />
 
 
-
     <Button
         android:id="@+id/buttonSubmit"
         android:layout_width="0dp"
-        android:layout_height="@dimen/_35sdp"
+        android:layout_height="@dimen/_32sdp"
         android:background="@drawable/yellow_button"
         android:text="@string/continue_to_register"
         android:textStyle="bold"
         android:fontFamily="@font/montserrat"
         android:textColor="@color/colorWhite"
-        android:layout_marginTop="@dimen/_25sdp"
+        android:layout_marginTop="@dimen/_15sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgPersonalType" />
