--- a/app/src/main/res/layout/content_profile_edit_personal.xml
+++ b/app/src/main/res/layout/content_profile_edit_personal.xml
@@ -265,6 +265,7 @@
                         android:contentDescription="@string/app_name"
                         android:layout_width="@dimen/_75sdp"
                         android:layout_height="@dimen/_75sdp"
+                        android:layout_marginTop="@dimen/_2sdp"
                         app:civ_border_width="0dp"
                         app:civ_background_color="@android:color/white"
                         app:civ_border_color="@android:color/white"
@@ -362,16 +363,6 @@
                 </android.support.constraint.ConstraintLayout>
 
             </android.support.v7.widget.CardView>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:layout_marginRight="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
-                android:fontFamily="@font/montserrat"
-                android:text="@string/make_inquiries"
-                android:textSize="@dimen/_10sdp" />
 
         </LinearLayout>
 
