--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -1,33 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:id="@+id/rootLayout"
     android:padding="@dimen/_10sdp"
     android:orientation="vertical"
-    android:background="@color/screenBackground">
+    android:background="@color/colorSemiWhite">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_170sdp"
+        android:layout_height="wrap_content"
+        card_view:cardCornerRadius="@dimen/_10sdp"
+        app:cardBackgroundColor="@color/colorWhite"
         >
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/ic_wallet_bg">
+            >
 
-            <TextView
-                android:id="@+id/textView14"
-                android:layout_width="wrap_content"
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txtHeader"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:layout_margin="@dimen/_10sdp"
+                android:padding="@dimen/_2sdp"
                 android:text="@string/lpesa_wallet_balance"
-                android:textSize="@dimen/_10sdp"
+                android:textSize="@dimen/_12sdp"
                 android:fontFamily="@font/montserrat"
-                android:textColor="@color/colorWhite"
+                android:textColor="@color/colorSemiBlack"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,143 +40,36 @@
                 android:id="@+id/txtWalletBal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
+                android:gravity="center"
                 android:fontFamily="@font/montserrat"
-                android:textColor="@color/colorWhite"
-                android:textSize="@dimen/_17sdp"
-                android:layout_marginStart="@dimen/_20sdp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView14" />
-
-            <TextView
-                android:id="@+id/txtCommission"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_5sdp"
-                android:fontFamily="@font/montserrat"
-                android:textColor="@color/colorWhite"
-                android:textSize="@dimen/_10sdp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <TextView
-                android:id="@+id/txt_min"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_20sdp"
-                android:layout_marginTop="@dimen/_25sdp"
-                android:textColor="@color/colorWhite"
+                android:textColor="@color/colorTextBlack"
                 android:textSize="@dimen/_14sdp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/txtCommission"
+                android:padding="@dimen/_2sdp"
+                android:drawablePadding="@dimen/_1sdp"
+                android:drawableStart="@drawable/ic_wallet_icon"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtWalletBal" />
-
-            <TextView
-                android:id="@+id/txt_max"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_25sdp"
-                android:layout_marginEnd="@dimen/_50sdp"
-                android:textColor="@color/colorWhite"
-                android:textSize="@dimen/_14sdp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/txtCommission"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtWalletBal" />
+                app:layout_constraintTop_toBottomOf="@+id/txtHeader"
+                app:layout_constraintBottom_toTopOf="@+id/dividerOne"
+                />
 
-
+           <View
+               android:id="@+id/dividerOne"
+               android:layout_width="match_parent"
+               android:layout_height="@dimen/_1sdp"
+               android:background="@color/divider_color"
+               app:layout_constraintStart_toStartOf="parent"
+               app:layout_constraintEnd_toEndOf="parent"
+               app:layout_constraintTop_toBottomOf="@+id/txtWalletBal"
+               android:layout_marginStart="@dimen/_15sdp"
+               android:layout_marginEnd="@dimen/_15sdp"
+               android:layout_marginTop="@dimen/_10sdp"
+               />
 
         </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp"
-        app:cardCornerRadius="@dimen/_4sdp"
-        >
 
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <com.app.l_pesa.common.CommonInputLayout
-                android:id="@+id/commonInputLayout5"
-                style="@style/customInputLayoutStyle"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="@dimen/_10sdp"
-                app:layout_constraintBottom_toTopOf="@+id/buttonWithdraw"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <com.app.l_pesa.common.CommonEditTextRegular
-                    android:id="@+id/etWithdrawalAmount"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="@string/withdrawal_amount"
-                    android:textColor="@color/dark_text_color"
-                    android:inputType="numberSigned"
-                    android:textSize="@dimen/_12sdp"
-                    android:maxLength="6" />
-
-
-            </com.app.l_pesa.common.CommonInputLayout>
-
-            <Button
-                android:id="@+id/buttonWithdraw"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/_30sdp"
-                android:layout_margin="@dimen/_10sdp"
-                android:background="@drawable/ripple_green_button"
-                android:fontFamily="@font/montserrat"
-                android:text="@string/withdraw"
-                android:textAllCaps="false"
-                android:textColor="@color/colorWhite"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent" />
-
-        </android.support.constraint.ConstraintLayout>
-
-    </android.support.v7.widget.CardView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
-        android:weightSum="1"
-        >
-
-        <ImageButton
-            android:id="@+id/imgTransactionHistory"
-            android:contentDescription="@string/app_name"
-            android:layout_width="0dp"
-            android:layout_weight=".50"
-            android:layout_height="@dimen/_50sdp"
-            android:layout_marginEnd="@dimen/_7sdp"
-            android:background="@drawable/ic_wallet_transaction_history_bg" />
-
-        <ImageButton
-            android:id="@+id/imgWithdrawalHistory"
-            android:contentDescription="@string/app_name"
-            android:layout_width="0dp"
-            android:layout_weight=".50"
-            android:layout_height="@dimen/_50sdp"
-            android:layout_marginStart="@dimen/_7sdp"
-            android:background="@drawable/ic_wallet_withdrawal_history_bg" />
-
-    </LinearLayout>
 
 </LinearLayout>
