--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -13,8 +13,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         card_view:cardCornerRadius="@dimen/_15sdp"
-        card_view:contentPaddingBottom="@dimen/_10sdp"
+        card_view:contentPadding="@dimen/_10sdp"
         card_view:cardBackgroundColor="@color/colorWhite"
+        card_view:cardElevation="4dp"
+        card_view:cardMaxElevation="6dp"
         >
 
         <android.support.constraint.ConstraintLayout
