--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -195,10 +195,20 @@
     </android.support.v7.widget.CardView>
 
 
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_15sdp"
+        card_view:cardCornerRadius="@dimen/_15sdp"
+        card_view:cardBackgroundColor="@color/colorWhite"
+
+        >
+
      <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_15sdp">
+
+         >
 
             <com.app.l_pesa.common.CommonInputLayout
                 android:id="@+id/commonInputLayout5"
@@ -246,6 +256,8 @@
                 app:layout_constraintStart_toStartOf="parent" />
 
         </android.support.constraint.ConstraintLayout>
+
+    </android.support.v7.widget.CardView>
 
 
     <LinearLayout
