--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -12,8 +12,9 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="@dimen/_15sdp"
+        app:cardCornerRadius="@dimen/_5sdp"
         card_view:cardBackgroundColor="@color/colorWhite"
+
 
         >
 
