--- a/app/src/main/res/layout/activity_forgot_pin.xml
+++ b/app/src/main/res/layout/activity_forgot_pin.xml
@@ -153,7 +153,8 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
+        android:theme="@style/Progressbar.Red"
+        android:indeterminateTintMode="src_in"
         android:layout_width="@dimen/_32sdp"
         android:layout_height="@dimen/_32sdp"
         android:indeterminateTint="@color/colorRed"
