--- a/app/src/main/res/layout/content_change_login_pin.xml
+++ b/app/src/main/res/layout/content_change_login_pin.xml
@@ -153,14 +153,15 @@
             <ProgressBar
                 android:id="@+id/progressBar"
                 android:visibility="invisible"
-                style="?android:attr/progressBarStyle"
-                android:layout_width="@dimen/_25sdp"
-                android:layout_height="@dimen/_25sdp"
+                android:theme="@style/Progressbar.Red"
+                android:indeterminateTintMode="src_in"
+                android:layout_width="@dimen/_32sdp"
+                android:layout_height="@dimen/_32sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:indeterminateTint="@color/colorPrimary"/>
+                android:indeterminateTint="@color/colorRed"/>
 
 
 
