--- a/app/src/main/res/layout/layout_load_more.xml
+++ b/app/src/main/res/layout/layout_load_more.xml
@@ -9,12 +9,13 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
+        android:theme="@style/Progressbar.Red"
+        android:indeterminateTintMode="src_in"
         android:layout_width="@dimen/_20sdp"
         android:layout_height="@dimen/_20sdp"
         android:layout_gravity="center_horizontal"
         android:indeterminate="true"
-        android:indeterminateTintMode="src_atop"
-        android:indeterminateTint="@color/colorApp"
+        android:indeterminateTint="@color/colorRed"
 
         />
 </LinearLayout>
